appId: is.follow
---
- runFlow:
    file: ./dismiss-overlays.yaml
- tapOn:
    text: Home
- tapOn:
    id: timeline-view-videos
- tapOn:
    id: timeline-view-articles
- extendedWaitUntil:
    visible:
      id: timeline-entry-first
    timeout: 20000
- tapOn:
    id: timeline-entry-first
    point: "50%,50%"
- extendedWaitUntil:
    notVisible:
      id: timeline-entry-first
    timeout: 20000
- extendedWaitUntil:
    visible:
      id: navigation-back
    timeout: 20000
- extendedWaitUntil:
    visible: Hey there! Welcome to Folo. We're so glad to have you.
    timeout: 20000
- scrollUntilVisible:
    element:
      text: Your Subscriptions
    direction: DOWN
    timeout: 30000
    centerElement: true
- tapOn:
    id: navigation-back
- extendedWaitUntil:
    visible:
      id: timeline-entry-first
    timeout: 20000
- longPressOn:
    id: timeline-entry-first
- runFlow:
    when:
      visible: Mark as Read
    commands:
      - tapOn: Mark as Read
      - longPressOn:
          id: timeline-entry-first
      - assertVisible: Mark as Unread
      - tapOn: Mark as Unread
      - longPressOn:
          id: timeline-entry-first
      - assertVisible: Mark as Read
- runFlow:
    when:
      visible: Mark as Unread
    commands:
      - tapOn: Mark as Unread
      - longPressOn:
          id: timeline-entry-first
      - assertVisible: Mark as Read
      - tapOn: Mark as Read
      - longPressOn:
          id: timeline-entry-first
      - assertVisible: Mark as Unread

- runFlow:
    when:
      visible: Mark as Read
    commands:
      - tapOn:
          point: "200,120"
- runFlow:
    when:
      visible: Mark as Unread
    commands:
      - tapOn:
          point: "200,120"
- runFlow:
    when:
      visible:
        id: navigation-back
    commands:
      - tapOn:
          id: navigation-back
- extendedWaitUntil:
    visible:
      id: timeline-view-articles
    timeout: 20000
